[package]
name = "minigolf_backend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_matchbox = { version = "0.10", features = ["signaling"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.0", features = ["full"] } 
bevy-tokio-tasks = "0.14.0"
# uuid = "1.11.0" <- Covered below in dependencies.uuid

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",                # Lets you generate random UUIDs intended for db generated via Unix timestamp
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
