[package]
name = "minigolf_backend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_easy_vec_ui = "0.1.0"
bevy_matchbox = { version = "0.10", features = ["signaling"] }
bevy-tokio-tasks = "0.14.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "mysql", "time", "uuid" ] }
time = { version = "0.3.36", features = [ "local-offset", "serde" ] }
tokio = { version = "1.0", features = ["full"] } 
serde = { version = "1.0.215", features = ["derive"] }
rmp-serde = "1.3.0"
uuid = { version = "1.11.0",  features = [ "v4",  "v7", "fast-rng", "macro-diagnostics" ] }
regex = "1.11.1"
serde_json = "1.0.133"

